# dwg2geo

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  PROMPT.md  README.md  README.pt-BR.md  THIRD-PARTY-LICENSES.md  about.toml  build.rs  sbom.cdx.json
.github/workflows/: ci.yml  pages.yml  release-packages.yml  release.yml
bindings/js/: Cargo.toml  README.md  build.sh
bindings/js/.cargo/: config.toml
bindings/js/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
docs/: ARCHITECTURE.md  AUDIT-2026-07-22.md  DECISIONS-FUTURE-COMMANDS.md  DECISIONS.md  DIFFERENTIAL.md  DISTRIBUTION.md  ENTITY_MAPPING.md  LICENSING.md  PACKAGING.md  PLAN.md  REFERENCES.md  RISKS.md
prompts/: NEXT_NATIVE_BACKEND.md  START_CLAUDE.md  START_CODEX.md
samples/: README.md  corredor-sul-histogram.json  corredor-sul.metadata.json
scripts/: about-check.hbs  dev-check.sh  fetch-sorocaba-boundary.sh  gen-licenses.sh  gen-sbom.sh
site/: index.html
src/: cli.rs  commands.rs  dwg.rs  lib.rs  main.rs  report.rs
src/backend/: external.rs  mod.rs  native.rs  tools.rs
src/backend/native/: calibrate.rs  convert.rs  mod.rs  model.rs  reproject.rs  units.rs  writer.rs
tests/: cli.rs  cli_gen.rs  differential.rs  embed.rs  entity_e2e.rs  entity_policy.rs  gen_fixture.rs  golden.rs
tests/golden/: native-basic.geojson
