[package]
name = "dwg2geo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Convert engineering DWG drawings to auditable GeoJSON"
license = "MIT"
repository = "https://github.com/milkway/dwg2geo"
homepage = "https://github.com/milkway/dwg2geo"
readme = "README.md"
keywords = ["dwg", "geojson", "cad", "gis", "conversion"]
categories = ["command-line-utilities", "science::geo"]
exclude = ["site/", ".github/", "Dockerfile", ".dockerignore"]

# The language bindings live in the same repo; plain `cargo build`/`test` at
# the root only touches the core crate (default-members), so CI and the
# published crate are unaffected by the pyo3/wasm toolchains.
[workspace]
members = [".", "bindings/js", "bindings/python"]
default-members = ["."]

# Shared by the CLI and the wasm/python bindings (member profiles are ignored
# in a workspace): fat LTO keeps the wasm and wheels small.
[profile.release]
lto = true
codegen-units = 1

[features]
default = ["external-backend"]
external-backend = []
native-backend = [
    "dep:acadrust",
    "dep:geo-types",
    "dep:geojson",
]
# PROJ-based reprojection for the native backend (Milestone 5). Split out of
# native-backend because proj-sys needs system PROJ >= 9.6 or a from-source
# build (cmake + sqlite3), which Milestone 2 inspection does not require.
native-reproject = ["native-backend", "dep:proj", "dep:proj-sys"]

[dependencies]
anyhow = "1"
clap = { version = "4.6.3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"

# Optional native conversion stack. The first agent session must verify the
# resolved versions and API compatibility on the target Rust toolchain.
acadrust = { version = "0.4.1", optional = true }
geo-types = { version = "0.7.19", optional = true }
geojson = { version = "1.0.0", optional = true, features = ["geo-types"] }
proj = { version = "0.31.0", optional = true }
proj-sys = { version = "0.27.0", optional = true }

[dev-dependencies]
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
proptest = "1"

[build-dependencies]
clap = { version = "4.6.3", features = ["derive"] }
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
