[package]
name = "dwg2geo-wasm"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Convert engineering DWG drawings to GeoJSON in the browser or Node (WebAssembly)"
license = "MIT"
repository = "https://github.com/milkway/dwg2geo"
homepage = "https://github.com/milkway/dwg2geo"
publish = false # npm package; not a crates.io crate

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dwg2geo = { path = "../..", version = "0.2.1", default-features = false, features = ["native-backend"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
